updating prod files

--- a/hello_world/template.yaml
+++ b/hello_world/template.yaml
@@ -20,4 +20,4 @@ Resources:
       Runtime: python3.7
       Environment:
         Variables:
-          PARAM: qa_version
+          PARAM: prod_version
